header - clipping text resolved

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ h1 {
     background: rgb(238,174,202);
     background: linear-gradient(144deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     background-clip: text;
+    -webkit-background-clip : text;
     background-size: 13%;
     -webkit-text-fill-color: transparent;
     font-size: 0.5em;
